--- a/index.html
+++ b/index.html
@@ -497,14 +497,14 @@
         <div class="subscribe-container">
           <p class="subscribe-text">Subscribe</p>
           <form class="subscribe-form">
-            <label class="subscribe-label" for="subscribe"></label>
-            <input
-              class="subscribe-input"
-              type="email"
-              name="subscribe"
-              id="subscribe"
-              placeholder="E-mail"
-            />
+            <label class="subscribe-label">
+              <input
+                class="subscribe-input"
+                type="email"
+                name="subscribe"
+                placeholder="E-mail"
+              />
+            </label>
             <button class="subscribe-btn" type="submit">
               Subscribe
               <svg class="subscribe-icon-svg" width="24" height="24">
@@ -525,10 +525,11 @@
             <use href="./images/icons.svg#icon-close-button"></use>
           </svg>
         </button>
-        <form action="" class="modal-form">
-          <p class="modal-text">
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <!-- <p class="modal-text">
             Leave your contacts and we will call you back
-          </p>
+          </p> -->
           <div class="modal-field">
             <label class="modal-label" for="user-name">Name</label>
             <div class="modal-input-wrap">
