--- a/index.html
+++ b/index.html
@@ -520,16 +520,13 @@
     </footer>
     <div class="modal-overlay">
       <div class="modal">
-        <button class="modal-exit-btn" type="submit">
+        <button class="modal-exit-btn" type="button">
           <svg class="modal-exit-svg" width="8" height="8">
             <use href="./images/icons.svg#icon-close-button"></use>
           </svg>
         </button>
         <p class="modal-text">Leave your contacts and we will call you back</p>
         <form class="modal-form">
-          <!-- <p class="modal-text">
-            Leave your contacts and we will call you back
-          </p> -->
           <div class="modal-field">
             <label class="modal-label" for="user-name">Name</label>
             <div class="modal-input-wrap">
