--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                 id="user-name"
                 placeholder=""
               />
-              <svg class="modal-field-icon" width="16" height="16">
+              <svg class="modal-field-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-modal-name"></use>
               </svg>
             </div>
@@ -552,7 +552,7 @@
                 id="user-tel"
                 placeholder=""
               />
-              <svg class="modal-field-icon" width="16" height="16">
+              <svg class="modal-field-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-modal-tel"></use>
               </svg>
             </div>
@@ -567,12 +567,12 @@
                 id="user-email"
                 placeholder=""
               />
-              <svg class="modal-field-icon" width="16" height="16">
+              <svg class="modal-field-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-modal-email"></use>
               </svg>
             </div>
           </div>
-          <div class="modal-field">
+          <div class="modal-field-textarea">
             <label class="modal-label" for="user-comment">Comment</label>
             <textarea
               class="modal-textarea"
@@ -587,12 +587,12 @@
             <input
               class="modal-policy-input visually-hidden"
               type="checkbox"
-              name="policy"
-              id="policy"
+              name="user-privacy"
+              id="user-privacy"
               value="true"
             />
-            <label class="modal-policy-label" for="policy">
-              <span>
+            <label class="modal-policy-label" for="user-privacy">
+              <span class="modal-policy-span">
                 <svg class="modal-policy-svg" width="10" height="8">
                   <use href="./images/icons.svg#icon-vector-modal"></use>
                 </svg>
